# domain-data-story

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  README-03-data-analysis.md  README.md  pyproject.toml
dashboard/: app.py
docs/: analysis_findings.md  data_dictionary.md  dataspell_setup.md  eda_findings.md  methodology.md
notebooks/: 01_eda.ipynb  02_analysis.ipynb  03_post_figures.ipynb
sql/: 01_register_sources.sql  02_clean_stops.sql  03_features_delay_metrics.sql
src/bahn_delay_story/: __init__.py  config.py  ingest.py  pipeline.py  plots.py  quality.py
tests/: test_pipeline.py  test_project_layout.py
