[project]
name = "bahn-delay-story"
version = "0.1.0"
description = "A reproducible Deutsche Bahn delay data story using DuckDB, Polars, notebooks, Streamlit, and Quarto."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2.0",
  "polars>=1.20.0",
  "pandas>=2.2.0",
  "pyarrow>=18.0.0",
  "plotly>=5.24.0",
  "streamlit>=1.40.0",
  "statsmodels>=0.14.0",
  "scikit-learn>=1.5.0",
  "huggingface-hub>=0.28.0",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
  "jupyter>=1.1.1",
  "ipykernel>=6.29.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[project.scripts]
bahn-download = "bahn_delay_story.ingest:main"
bahn-pipeline = "bahn_delay_story.pipeline:main"
bahn-quality = "bahn_delay_story.quality:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bahn_delay_story"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
